# rss2newsletter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  newsletter_template.html  pyproject.toml  requirements.txt  rss2newsletter  rss2newsletter.conf  setup.py
.github/workflows/: main.yml
